fixed script links, updated dark mode stylesheet

--- a/css/styleDark.css
+++ b/css/styleDark.css
@@ -67,3 +67,8 @@ li {
 .projectBox:hover {
 	transform: scale(1.05);
 }
+
+#navigation a {
+	color: white;
+	text-decoration: underline;
+}
